--- a/settings.gradle
+++ b/settings.gradle
@@ -30,6 +30,7 @@ include 'fabric-models-v0'
 include 'fabric-networking-v0'
 include 'fabric-networking-blockentity-v0'
 include 'fabric-object-builders-v0'
+include 'fabric-particles-v1'
 include 'fabric-registry-sync-v0'
 include 'fabric-renderer-api-v1'
 include 'fabric-renderer-indigo'
