--- a/build.gradle
+++ b/build.gradle
@@ -13,8 +13,8 @@ def ENV = System.getenv()
 
 class Globals {
 	static def baseVersion = "0.3.1"
-	static def mcVersion = "1.14.4"
-	static def yarnVersion = "+build.1"
+	static def mcVersion = "19w34a"
+	static def yarnVersion = "+build.2"
 }
 
 import org.apache.commons.codec.digest.DigestUtils
