--- a/fabric-tool-attributes-v1/build.gradle
+++ b/fabric-tool-attributes-v1/build.gradle
@@ -1,4 +1,4 @@
-archivesBaseName = "fabric-mining-levels-v0"
+archivesBaseName = "fabric-tool-attributes-v1"
 version = getSubprojectVersion(project, "0.1.0")
 
 dependencies {
