Renamed `fabric-climbable` to `fabric-climbing`
The module was originally named for the interface which is no longer present.

--- a/fabric-climbing-v1/build.gradle
+++ b/fabric-climbing-v1/build.gradle
@@ -1,4 +1,4 @@
-archivesBaseName = "fabric-climbable-v1"
+archivesBaseName = "fabric-climbing-v1"
 version = getSubprojectVersion(project, "0.1.0")
 
 dependencies {
