--- a/fabric-tool-attributes-v1/build.gradle
+++ b/fabric-tool-attributes-v1/build.gradle
@@ -4,4 +4,5 @@ version = getSubprojectVersion(project, "0.1.0")
 dependencies {
     compile project(path: ':fabric-api-base', configuration: 'dev')
     compile project(path: ':fabric-tag-extensions-v0', configuration: 'dev')
+	compileOnly 'com.google.code.findbugs:jsr305:3.0.2'
 }
