--- a/settings.gradle
+++ b/settings.gradle
@@ -24,6 +24,7 @@ include 'fabric-events-lifecycle-v0'
 include 'fabric-item-groups-v0'
 include 'fabric-keybindings-v0'
 include 'fabric-loot-tables-v1'
+include 'fabric-mining-levels-v0'
 include 'fabric-models-v0'
 include 'fabric-networking-v0'
 include 'fabric-networking-blockentity-v0'
