--- a/settings.gradle
+++ b/settings.gradle
@@ -31,7 +31,7 @@ include 'fabric-networking-blockentity-v0'
 include 'fabric-object-builders-v0'
 include 'fabric-registry-sync-v0'
 include 'fabric-renderer-api-v1'
-//include 'fabric-renderer-indigo'
+include 'fabric-renderer-indigo'
 include 'fabric-rendering-v0'
 include 'fabric-rendering-data-attachment-v1'
 include 'fabric-rendering-fluids-v1'
