sub biome and large edges

--- a/fabric-biomes-v1/src/main/resources/fabric-biomes-v1.mixins.json
+++ b/fabric-biomes-v1/src/main/resources/fabric-biomes-v1.mixins.json
@@ -6,7 +6,9 @@
     "MixinAddEdgeBiomesLayer",
     "MixinAddHillsLayer",
     "MixinAddRiversLayer",
+	"MixinAddSunflowerPlainsLayer",
     "MixinBiomeSource",
+	"MixinEaseBiomeEdgeLayer",
     "MixinSetBaseBiomesLayer",
     "MixinVanillaLayeredBiomeSource"
   ],
