Another day, another patch. Added a Custom Fabric Schema implementation that registers all ReferenceTypes. Bug needing to be fixed:
[23:46:27] [main/ERROR]: Something went wrong upgrading!
java.util.NoSuchElementException: null
 at it.unimi.dsi.fastutil.ints.IntAVLTreeSet.firstInt(IntAVLTreeSet.java:942) ~[fastutil-8.2.1.jar:?]
 at com.mojang.datafixers.DataFixerUpper.getLowestFixSameVersion(DataFixerUpper.java:115) ~[datafixerupper-2.0.24.jar:?]
 at com.mojang.datafixers.DataFixerUpper.getRule(DataFixerUpper.java:127) ~[datafixerupper-2.0.24.jar:?]
 at com.mojang.datafixers.DataFixerUpper.update(DataFixerUpper.java:84) [datafixerupper-2.0.24.jar:?]
 at net.fabricmc.fabric.impl.datafixer.FabricDataFixerImpl.updateWithAllFixers(FabricDataFixerImpl.java:73) [fabric-datafixer-v1-0.1.0+fd9b895342-dev.jar:?]
 at net.minecraft.util.TagHelper.handler$updateModFixers$zcm000(TagHelper.java:568) [minecraft-1.14.4-mapped-net.fabricmc.yarn-1.jar:?]
 at net.minecraft.util.TagHelper.update(TagHelper.java:494) [minecraft-1.14.4-mapped-net.fabricmc.yarn-1.jar:?]
 at net.minecraft.util.TagHelper.update(TagHelper.java:490) [minecraft-1.14.4-mapped-net.fabricmc.yarn-1.jar:?]
 at net.minecraft.client.options.GameOptions.method_1626(GameOptions.java:486) [minecraft-1.14.4-mapped-net.fabricmc.yarn-1.jar:?]
 at net.minecraft.client.options.GameOptions.load(GameOptions.java:249) [minecraft-1.14.4-mapped-net.fabricmc.yarn-1.jar:?]
 at net.minecraft.client.options.GameOptions.<init>(GameOptions.java:211) [minecraft-1.14.4-mapped-net.fabricmc.yarn-1.jar:?]
 at net.minecraft.client.MinecraftClient.init(MinecraftClient.java:440) [minecraft-1.14.4-mapped-net.fabricmc.yarn-1.jar:?]
 at net.minecraft.client.MinecraftClient.start(MinecraftClient.java:394) [minecraft-1.14.4-mapped-net.fabricmc.yarn-1.jar:?]
 at net.minecraft.client.main.Main.main(Main.java:155) [minecraft-1.14.4-mapped-net.fabricmc.yarn-1.jar:?]
 at sun.reflect.NativeMethodAccessorImpl.invoke0(Native Method) ~[?:1.8.0_161]
 at sun.r

--- a/fabric-datafixer-v1/build.gradle
+++ b/fabric-datafixer-v1/build.gradle
@@ -4,4 +4,5 @@ version = getSubprojectVersion(project, "0.1.0")
 dependencies {
 	compile project(path: ':fabric-api-base', configuration: 'dev')
 	compile project(path: ':fabric-events-lifecycle-v0', configuration: 'dev')
+	compile project(path: ':fabric-object-builders-v0', configuration: 'dev')
 }
