--- a/fabric-resource-loader-v0/build.gradle
+++ b/fabric-resource-loader-v0/build.gradle
@@ -1,2 +1,6 @@
 archivesBaseName = "fabric-resource-loader-v0"
-version = getSubprojectVersion(project, "0.1.4")
+version = getSubprojectVersion(project, "0.1.5")
+
+dependencies {
+	compile project(path: ':fabric-api-base', configuration: 'dev')
+}
