--- a/settings.gradle
+++ b/settings.gradle
@@ -28,6 +28,7 @@ include 'fabric-mining-levels-v0'
 include 'fabric-models-v0'
 include 'fabric-networking-v0'
 include 'fabric-networking-blockentity-v0'
+include 'fabric-networking-entity-v1'
 include 'fabric-object-builders-v0'
 include 'fabric-registry-sync-v0'
 include 'fabric-renderer-api-v1'
