--- a/settings.gradle
+++ b/settings.gradle
@@ -33,6 +33,7 @@ include 'fabric-object-builders-v0'
 include 'fabric-registry-sync-v0'
 include 'fabric-renderer-api-v1'
 include 'fabric-renderer-indigo'
+include 'fabric-renderer-registries-v1'
 include 'fabric-rendering-v0'
 include 'fabric-rendering-data-attachment-v1'
 include 'fabric-rendering-fluids-v1'
