--- a/fabric-particles-v1/build.gradle
+++ b/fabric-particles-v1/build.gradle
@@ -1,6 +1,7 @@
-archivesBaseName = "fabric-rendering-data-attachment-v1"
+archivesBaseName = "fabric-particles-v1"
 version = getSubprojectVersion(project, "0.1.1")
 
 dependencies {
 	compile project(path: ':fabric-api-base', configuration: 'dev')
+	compile project(path: ':fabric-textures-v0', configuration: 'dev')
 }
