Embellish tag api
also fix #421

Signed-off-by: liach <liach@users.noreply.github.com>

--- a/fabric-tag-extensions-v0/src/main/resources/fabric-tag-extensions-v0.mixins.json
+++ b/fabric-tag-extensions-v0/src/main/resources/fabric-tag-extensions-v0.mixins.json
@@ -4,7 +4,8 @@
   "compatibilityLevel": "JAVA_8",
   "mixins": [
     "MixinTag",
-    "MixinTagBuilder"
+    "MixinTagBuilder",
+    "FluidTagsAccessor"
   ],
   "injectors": {
     "defaultRequire": 1
