19w45b + Fix missed optional mixin fixes
MixinChunkRebuildTask should have been ported yesterday, but it was only logging out a warning.

--- a/build.gradle
+++ b/build.gradle
@@ -12,8 +12,8 @@ plugins {
 def ENV = System.getenv()
 
 class Globals {
-	static def baseVersion = "0.4.10"
-	static def mcVersion = "19w45a"
+	static def baseVersion = "0.4.11"
+	static def mcVersion = "19w45b"
 	static def yarnVersion = "+build.1"
 }
 
