--- a/settings.gradle
+++ b/settings.gradle
@@ -29,6 +29,7 @@ include 'fabric-mining-levels-v0'
 include 'fabric-models-v0'
 include 'fabric-networking-v0'
 include 'fabric-networking-blockentity-v0'
+include 'fabric-networking-entity-v1'
 include 'fabric-object-builders-v0'
 include 'fabric-particles-v1'
 include 'fabric-registry-sync-v0'
