--- a/settings.gradle
+++ b/settings.gradle
@@ -42,3 +42,4 @@ include 'fabric-resource-loader-v0'
 include 'fabric-tag-extensions-v0'
 include 'fabric-textures-v0'
 include 'fabric-dimensions-v1'
+include 'fabric-tool-attributes-v1'
