--- a/build.gradle
+++ b/build.gradle
@@ -39,7 +39,8 @@ def getBranch(){
 	if (grgit == null) {
 		return "unknown"
 	}
-	return grgit.branch.current().name
+	def branch = grgit.branch.current().name
+	return branch.substring(branch.lastIndexOf("/") + 1)
 }
 
 allprojects {
