--- a/fabric-biomes-v1/src/main/resources/fabric-biomes-v1.mixins.json
+++ b/fabric-biomes-v1/src/main/resources/fabric-biomes-v1.mixins.json
@@ -8,8 +8,8 @@
     "MixinAddRiversLayer",
     "MixinBiomeSource",
     "MixinSetBaseBiomesLayer",
-    "MixinVanillaLayeredBiomeSource",
-    "MixinTheNetherDimension"
+    "MixinTheNetherDimension",
+    "MixinVanillaLayeredBiomeSource"
   ],
   "injectors": {
     "defaultRequire": 1
