Experimental nether biomes API (#496)
* Add nether biomes API

* Update fabric-biomes-v1.mixins.json

* fixed license

* smarter injection point

* Apply suggestions from coderbot's review

Co-Authored-By: coderbot16 <coderbot16@gmail.com>

* fix code style

* remove redundant import

* improve docs and update yarn version

* Apply suggestions from code review

Co-Authored-By: coderbot16 <coderbot16@gmail.com>
Co-Authored-By: Juuxel <6596629+Juuxel@users.noreply.github.com>

* bump version

* mark classes as final

* Changes from modmuss's review

add 1.16 dependency, merge NetherBiomesImpl into InternalBiomeData, fix code style, and fix mixin target

* Update build.gradle

* Update API to inform users that it is experimental

* remove beta annotion

* optimize imports

Co-authored-by: coderbot16 <coderbot16@gmail.com>
Co-authored-by: Juuxel <6596629+Juuxel@users.noreply.github.com>

--- a/fabric-biomes-v1/src/main/resources/fabric-biomes-v1.mixins.json
+++ b/fabric-biomes-v1/src/main/resources/fabric-biomes-v1.mixins.json
@@ -8,6 +8,7 @@
     "MixinAddRiversLayer",
     "MixinBiomeSource",
     "MixinSetBaseBiomesLayer",
+    "MixinTheNetherDimension",
     "MixinVanillaLayeredBiomeSource"
   ],
   "injectors": {
