Split out player finding stuff to networking player tracking API v1
Signed-off-by: liach <liach@users.noreply.github.com>

--- a/settings.gradle
+++ b/settings.gradle
@@ -28,6 +28,7 @@ include 'fabric-loot-tables-v1'
 include 'fabric-mining-levels-v0'
 include 'fabric-models-v0'
 include 'fabric-networking-v0'
+include 'fabric-networking-player-tracking-api-v1'
 include 'fabric-networking-blockentity-v0'
 include 'fabric-object-builders-v0'
 include 'fabric-particles-v1'
