--- a/fabric-event-player-v1/build.gradle
+++ b/fabric-event-player-v1/build.gradle
@@ -1,4 +1,4 @@
-archivesBaseName = "fabric-events-player-v1"
+archivesBaseName = "fabric-event-player-v1"
 version = getSubprojectVersion(project, "1.0.0")
 
 dependencies {
