--- a/fabric-command-v1/build.gradle
+++ b/fabric-command-v1/build.gradle
@@ -1,4 +1,4 @@
-archivesBaseName = "fabric-commands-v1"
+archivesBaseName = "fabric-command-v1"
 version = getSubprojectVersion(project, "1.0.0")
 
 dependencies {
