--- a/settings.gradle
+++ b/settings.gradle
@@ -17,7 +17,7 @@ include 'fabric-api-base'
 include 'fabric-biomes-v1'
 include 'fabric-blockrenderlayer-v1'
 include 'fabric-commands-v0'
-include 'fabric-commands-v1'
+include 'fabric-command-v1'
 include 'fabric-containers-v0'
 include 'fabric-content-registries-v0'
 include 'fabric-crash-report-info-v1'
