--- a/build.gradle
+++ b/build.gradle
@@ -12,8 +12,8 @@ plugins {
 def ENV = System.getenv()
 
 class Globals {
-	static def baseVersion = "0.5.6"
-	static def mcVersion = "20w13a"
+	static def baseVersion = "0.5.7"
+	static def mcVersion = "20w14infinite"
 	static def yarnVersion = "+build.1"
 }
 
