--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ jdk:
 
 script:
   - chmod +x gradlew
-  - ./gradlew check build --stacktrace
+  - ./gradlew check build publishToMavenLocal --stacktrace
 
 notifications:
   email: false
