Update checkstyle and change tab width to be 4 than 8 (#518)
* Remove unnecessary chmod in travis script
* Update checkstyle and fix indent config
* Travis CI optimizations and checkstyle fixes

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,9 +3,9 @@ install: true
 
 jdk:
   - openjdk8
+  - openjdk11
 
 script:
-  - chmod +x gradlew
   - ./gradlew check build publishToMavenLocal --stacktrace
 
 notifications:
