--- a/settings.gradle
+++ b/settings.gradle
@@ -20,6 +20,7 @@ include 'fabric-commands-v0'
 include 'fabric-command-api-v1'
 include 'fabric-containers-v0'
 include 'fabric-content-registries-v0'
+include 'fabric-content-registries-v1'
 include 'fabric-crash-report-info-v1'
 //include 'fabric-dimensions-v1'
 include 'fabric-events-interaction-v0'
