--- a/settings.gradle
+++ b/settings.gradle
@@ -19,6 +19,7 @@ include 'fabric-blockrenderlayer-v1'
 include 'fabric-commands-v0'
 include 'fabric-containers-v0'
 include 'fabric-content-registries-v0'
+include 'fabric-content-registries-v1'
 include 'fabric-crash-report-info-v1'
 include 'fabric-events-interaction-v0'
 include 'fabric-events-lifecycle-v0'
