--- a/build.gradle
+++ b/build.gradle
@@ -6,7 +6,7 @@ plugins {
 	id 'fabric-loom' version '0.2.7-SNAPSHOT' apply false
 	id 'net.minecrell.licenser' version '0.4.1'
 	id "org.ajoberstar.grgit" version "3.1.1"
-	id 'com.matthewprenger.cursegradle' version "1.1.2"
+	id 'com.matthewprenger.cursegradle' version "1.4.0"
 }
 
 def ENV = System.getenv()
@@ -246,6 +246,7 @@ curseforge {
 		changelog = 'A changelog can be found at https://github.com/FabricMC/fabric/commits'
 		releaseType = 'beta'
 		addGameVersion '1.16-Snapshot'
+		addGameVersion 'Fabric'
 		mainArtifact(file("${project.buildDir}/libs/${archivesBaseName}-${version}.jar")) {
 			displayName = "[$Globals.mcVersion] Fabric API $Globals.baseVersion build $ENV.BUILD_NUMBER"
 		}
