Base+Branch+Build versioning
Because I want "0.5.1+1.15+build.+" to work.

--- a/build.gradle
+++ b/build.gradle
@@ -17,7 +17,7 @@ class Globals {
 	static def yarnVersion = "+build.1"
 }
 
-version = Globals.baseVersion + "+" + (ENV.BUILD_NUMBER ? ("build." + ENV.BUILD_NUMBER) : "local") + "-" + getBranch()
+version = Globals.baseVersion + "+" + getBranch() + "+" + (ENV.BUILD_NUMBER ? ("build." + ENV.BUILD_NUMBER) : "local")
 logger.lifecycle("Building Fabric: " + version)
 
 import org.apache.commons.codec.digest.DigestUtils
