--- a/fabric-object-builders-v0/build.gradle
+++ b/fabric-object-builders-v0/build.gradle
@@ -3,5 +3,5 @@ version = getSubprojectVersion(project, "0.1.4")
 
 dependencies {
     compile project(path: ':fabric-api-base', configuration: 'dev')
-    compile project(path: ':fabric-mining-levels-v0', configuration: 'dev')
+    compile project(path: ':fabric-tool-attribute-api-v1', configuration: 'dev')
 }
