--- a/build.gradle
+++ b/build.gradle
@@ -3,7 +3,7 @@ plugins {
 	id 'eclipse'
 	id 'idea'
 	id 'maven-publish'
-	id 'fabric-loom' version '0.2.7-SNAPSHOT' apply false
+	id 'fabric-loom' version '0.4.3' apply false
 	id 'net.minecrell.licenser' version '0.4.1'
 	id "org.ajoberstar.grgit" version "3.1.1"
 	id 'com.matthewprenger.cursegradle' version "1.4.0"
@@ -12,8 +12,8 @@ plugins {
 def ENV = System.getenv()
 
 class Globals {
-	static def baseVersion = "0.7.0"
-	static def mcVersion = "20w17a"
+	static def baseVersion = "0.7.1"
+	static def mcVersion = "20w18a"
 	static def yarnVersion = "+build.1"
 }
 
