--- a/settings.gradle
+++ b/settings.gradle
@@ -16,6 +16,7 @@ include 'fabric-api-base'
 
 include 'fabric-biomes-v1'
 include 'fabric-commands-v0'
+include 'fabric-command-api-v1'
 include 'fabric-containers-v0'
 include 'fabric-content-registries-v0'
 include 'fabric-crash-report-info-v1'
