--- a/fabric-keybindings-v0/build.gradle
+++ b/fabric-keybindings-v0/build.gradle
@@ -1,6 +1,7 @@
 archivesBaseName = "fabric-keybindings-v0"
-version = getSubprojectVersion(project, "0.1.1")
+version = getSubprojectVersion(project, "0.2.0")
 
 dependencies {
 	compile project(path: ':fabric-api-base', configuration: 'dev')
+	compile project(path: ':fabric-keybindings-v1', configuration: 'dev')
 }
