--- a/fabric-keybindings-v0/build.gradle
+++ b/fabric-keybindings-v0/build.gradle
@@ -3,5 +3,5 @@ version = getSubprojectVersion(project, "0.2.0")
 
 dependencies {
 	compile project(path: ':fabric-api-base', configuration: 'dev')
-	compile project(path: ':fabric-keybindings-v1', configuration: 'dev')
+	compile project(path: ':fabric-key-binding-api-v1', configuration: 'dev')
 }
