--- a/settings.gradle
+++ b/settings.gradle
@@ -44,5 +44,5 @@ include 'fabric-rendering-fluids-v1'
 include 'fabric-resource-loader-v0'
 include 'fabric-tag-extensions-v0'
 include 'fabric-textures-v0'
-//include 'fabric-dimensions-v1'
+include 'fabric-dimensions-v1'
 include 'fabric-tool-attribute-api-v1'
