Migrate loot tables to v2
v2 uses new 1.16 Yarn names. All uses of reflection were removed.
v2 supports the entire API of v1 with the exception of LootJsonParser
which has become useless in a Minecraft update.

--- a/settings.gradle
+++ b/settings.gradle
@@ -26,6 +26,7 @@ include 'fabric-events-lifecycle-v0'
 include 'fabric-item-groups-v0'
 include 'fabric-keybindings-v0'
 include 'fabric-loot-tables-v1'
+include 'fabric-loot-table-api-v2'
 include 'fabric-mining-levels-v0'
 include 'fabric-models-v0'
 include 'fabric-networking-v0'
