Allow registration of villager professions and add utilities to help register trade offers
This is needed due to one of the fisherman trades using a type aware map that throws an exception with undefined registry entries.

--- a/fabric-object-builder-api-v1/build.gradle
+++ b/fabric-object-builder-api-v1/build.gradle
@@ -4,6 +4,8 @@ version = getSubprojectVersion(project, "1.6.0")
 dependencies {
 	compile project(path: ':fabric-api-base', configuration: 'dev')
 	compile project(path: ':fabric-tool-attribute-api-v1', configuration: 'dev')
+
+	testmodCompile project(path: ':fabric-command-api-v1', configuration: 'dev')
 }
 
 minecraft {
