--- a/fabric-tag-api-v1/build.gradle
+++ b/fabric-tag-api-v1/build.gradle
@@ -1,10 +1,9 @@
-archivesBaseName = "fabric-tag-extensions-v0"
-version = getSubprojectVersion(project, "1.0.3")
+archivesBaseName = "fabric-tag-api-v1"
+version = getSubprojectVersion(project, "1.0.0")
 
 dependencies {
 	compile project(path: ':fabric-api-base', configuration: 'dev')
 	compile project(path: ':fabric-resource-loader-v0', configuration: 'dev')
-	compile project(path: ':fabric-tag-api-v1', configuration: 'dev')
 
 	testmodCompile project(path: ':fabric-lifecycle-events-v1', configuration: 'dev')
 }
