--- a/fabric-tag-extensions-v0/src/main/resources/fabric-tag-extensions-v0.mixins.json
+++ b/fabric-tag-extensions-v0/src/main/resources/fabric-tag-extensions-v0.mixins.json
@@ -1,11 +1,10 @@
 {
   "required": true,
-  "package": "net.fabricmc.fabric.mixin.tag.extension",
+  "package": "net.fabricmc.fabric.mixin.tag.legacy",
   "compatibilityLevel": "JAVA_8",
   "mixins": [
-    "AccessorFluidTags",
-    "MixinTagImpl",
-    "MixinTagBuilder"
+    "LegacyTagBuilderMixin",
+    "LegacyTagMixin"
   ],
   "injectors": {
     "defaultRequire": 1
