--- a/settings.gradle
+++ b/settings.gradle
@@ -49,6 +49,7 @@ include 'fabric-rendering-fluids-v1'
 include 'fabric-resource-loader-v0'
 include 'fabric-screen-handler-api-v1'
 include 'fabric-structure-api-v1'
+include 'fabric-tag-api-v1'
 include 'fabric-tag-extensions-v0'
 include 'fabric-textures-v0'
 include 'fabric-tool-attribute-api-v1'
