--- a/fabric-level-generators-v1/build.gradle
+++ b/fabric-level-generators-v1/build.gradle
@@ -7,4 +7,5 @@ minecraft {
 
 dependencies {
 	compile project(path: ':fabric-api-base', configuration: 'dev')
+	testmodCompile project(path: ':fabric-resource-loader-v0', configuration: 'dev')
 }
