--- a/settings.gradle
+++ b/settings.gradle
@@ -23,7 +23,7 @@ include 'fabric-content-registries-v0'
 include 'fabric-crash-report-info-v1'
 include 'fabric-events-interaction-v0'
 include 'fabric-events-lifecycle-v0'
-include 'fabric-fluids-v1'
+include 'fabric-fluid-v1'
 include 'fabric-item-groups-v0'
 include 'fabric-keybindings-v0'
 include 'fabric-loot-tables-v1'
