--- a/build.gradle
+++ b/build.gradle
@@ -3,7 +3,7 @@ plugins {
 	id 'eclipse'
 	id 'idea'
 	id 'maven-publish'
-	id 'fabric-loom' version '0.4.3' apply false
+	id 'fabric-loom' version '0.4-SNAPSHOT' apply false
 	id 'net.minecrell.licenser' version '0.4.1'
 	id "org.ajoberstar.grgit" version "3.1.1"
 	id 'com.matthewprenger.cursegradle' version "1.4.0"
@@ -12,8 +12,8 @@ plugins {
 def ENV = System.getenv()
 
 class Globals {
-	static def baseVersion = "0.11.2"
-	static def mcVersion = "20w22a"
+	static def baseVersion = "0.11.3"
+	static def mcVersion = "1.16-pre1"
 	static def yarnVersion = "+build.1"
 }
 
@@ -67,7 +67,7 @@ allprojects {
 	dependencies {
 		minecraft "com.mojang:minecraft:$Globals.mcVersion"
 		mappings "net.fabricmc:yarn:${Globals.mcVersion}${Globals.yarnVersion}:v2"
-		modCompile "net.fabricmc:fabric-loader:0.8.4+build.198"
+		modCompile "net.fabricmc:fabric-loader:0.8.7+build.201"
 	}
 
 	configurations {
