Remove Minecraft exclusion from build.gradle (thanks to Loom 0.4) + testmod change
Resource loader v0 is now testmodRuntimeOnly as it's not needed for compiling.

--- a/fabric-screen-handler-api-v1/build.gradle
+++ b/fabric-screen-handler-api-v1/build.gradle
@@ -6,7 +6,7 @@ minecraft {
 }
 
 dependencies {
-	compile(project(path: ':fabric-api-base', configuration: 'dev')) { exclude module: 'minecraft' }
-	compile(project(path: ':fabric-networking-v0', configuration: 'dev')) { exclude module: 'minecraft' }
-	testmodCompile(project(path: ':fabric-resource-loader-v0', configuration: 'dev')) { exclude module: 'minecraft' }
+	compile(project(path: ':fabric-api-base', configuration: 'dev'))
+	compile(project(path: ':fabric-networking-v0', configuration: 'dev'))
+	testmodRuntimeOnly(project(path: ':fabric-resource-loader-v0', configuration: 'dev'))
 }
