--- a/settings.gradle
+++ b/settings.gradle
@@ -46,3 +46,4 @@ include 'fabric-tag-extensions-v0'
 include 'fabric-textures-v0'
 //include 'fabric-dimensions-v1'
 include 'fabric-tool-attribute-api-v1'
+include 'fabric-transactions-api-v1'
