Fix build, minor issues

--- a/fabric-transaction-api-v1/build.gradle
+++ b/fabric-transaction-api-v1/build.gradle
@@ -1,4 +1,4 @@
-archivesBaseName = "fabric-transactions-v1"
+archivesBaseName = "fabric-transaction-api-v1"
 version = getSubprojectVersion(project, "0.0.1")
 
 dependencies {
