--- a/fabric-particles-v1/build.gradle
+++ b/fabric-particles-v1/build.gradle
@@ -1,7 +1,7 @@
-archivesBaseName = "fabric-particles-v1"
+archivesBaseName = "forge-particles-v1"
 version = getSubprojectVersion(project, "0.1.3")
 
 dependencies {
-	compile project(path: ':fabric-api-base', configuration: 'dev')
-	compile project(path: ':fabric-textures-v0', configuration: 'dev')
+	compile project(path: ':forge-api-base', configuration: 'dev')
+	compile project(path: ':forge-textures-v0', configuration: 'dev')
 }
