--- a/build.gradle
+++ b/build.gradle
@@ -13,7 +13,7 @@ def ENV = System.getenv()
 
 class Globals {
 	static def baseVersion = "0.12.4"
-	static def mcVersion = "1.16-pre8"
+	static def mcVersion = "1.16-rc1"
 	static def yarnVersion = "+build.1"
 }
 
@@ -67,7 +67,7 @@ allprojects {
 	dependencies {
 		minecraft "com.mojang:minecraft:$Globals.mcVersion"
 		mappings "net.fabricmc:yarn:${Globals.mcVersion}${Globals.yarnVersion}:v2"
-		modCompile "net.fabricmc:fabric-loader:0.8.7+build.201"
+		modCompile "net.fabricmc:fabric-loader:0.8.8+build.202"
 	}
 
 	configurations {
