Add the ability to add modded dimensions to the regions of the end.

--- a/fabric-biome-api-v1/src/main/resources/fabric-biome-api-v1.mixins.json
+++ b/fabric-biome-api-v1/src/main/resources/fabric-biome-api-v1.mixins.json
@@ -12,7 +12,8 @@
     "MultiNoiseBiomeSourceAccessor",
     "BiomeSourceAccessor",
     "BiomesAccessor",
-    "AddHillsLayerAccessor"
+    "AddHillsLayerAccessor",
+    "MixinTheEndBiomeSource"
   ],
   "injectors": {
     "defaultRequire": 1
