Mixin to end biome source

--- a/fabric-biome-api-v1/src/main/resources/fabric-biome-api-v1.mixins.json
+++ b/fabric-biome-api-v1/src/main/resources/fabric-biome-api-v1.mixins.json
@@ -10,8 +10,9 @@
     "MixinAddRiversLayer",
     "MixinMultiNoiseBiomeSource",
     "MixinSetBaseBiomesLayer",
-    "MultiNoiseBiomeSourceAccessor",
-    "VanillaLayeredBiomeSourceAccessor"
+    "MixinTheEndBiomeSource",
+    "MixinTheNetherDimension",
+    "MixinVanillaLayeredBiomeSource"
   ],
   "injectors": {
     "defaultRequire": 1
