--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,12 +2,15 @@ name: Build
 on: [push, pull_request]
 jobs:
   build:
+    strategy:
+      matrix:
+        java-version: [1.8, 11, 14]
     runs-on: ubuntu-20.04
     steps:
       - uses: actions/checkout@v1
       - uses: actions/setup-java@v1
         with:
-          java-version: 14
+          java-version: ${{ matrix.java-version }}
       - uses: eskatos/gradle-command-action@v1
         with:
           gradle-version: wrapper
