--- a/settings.gradle
+++ b/settings.gradle
@@ -22,9 +22,11 @@ include 'fabric-content-registries-v0'
 include 'fabric-crash-report-info-v1'
 include 'fabric-events-interaction-v0'
 include 'fabric-events-lifecycle-v0'
+include 'fabric-item-api-v1'
 include 'fabric-item-groups-v0'
 include 'fabric-keybindings-v0'
 include 'fabric-key-binding-api-v1'
+include 'fabric-lifecycle-events-v1'
 include 'fabric-loot-tables-v1'
 include 'fabric-mining-levels-v0'
 include 'fabric-models-v0'
