20w28a biome module fixes

--- a/fabric-biomes-v1/src/main/resources/fabric-biomes-v1.mixins.json
+++ b/fabric-biomes-v1/src/main/resources/fabric-biomes-v1.mixins.json
@@ -8,8 +8,9 @@
     "MixinAddRiversLayer",
     "MixinBiomeSource",
     "MixinSetBaseBiomesLayer",
-    "MixinTheNetherDimension",
-    "MixinVanillaLayeredBiomeSource"
+    "MixinMultiNoiseBiomeSource",
+    "MixinVanillaLayeredBiomeSource",
+    "MultiNoiseBiomeSourceAccessor"
   ],
   "injectors": {
     "defaultRequire": 1
