Fix nether biome's on the server Closes https://github.com/FabricMC/fabric/issues/861

--- a/fabric-biomes-v1/src/main/resources/fabric-biomes-v1.mixins.json
+++ b/fabric-biomes-v1/src/main/resources/fabric-biomes-v1.mixins.json
@@ -3,11 +3,14 @@
   "package": "net.fabricmc.fabric.mixin.biome",
   "compatibilityLevel": "JAVA_8",
   "mixins": [
+    "AccessorDimensionOptions",
+    "AccessorDimensionType",
     "MixinAddEdgeBiomesLayer",
     "MixinAddHillsLayer",
     "MixinAddRiversLayer",
     "MixinBiomeSource",
     "MixinSetBaseBiomesLayer",
+    "MixinMinecraftDedicatedServer",
     "MixinMultiNoiseBiomeSource",
     "MixinVanillaLayeredBiomeSource",
     "MultiNoiseBiomeSourceAccessor"
