20w28a Biome Module fixes (#874)
* 20w28a biome module fixes

* update version to 0.3.0

* major version bump to 1.0.0

* Update mappings

* Fix nether biome test's

* Fix nether biome's on the server
Closes https://github.com/FabricMC/fabric/issues/861

* Accessor name changes

Co-authored-by: modmuss50 <modmuss50@gmail.com>

--- a/fabric-biomes-v1/src/main/resources/fabric-biomes-v1.mixins.json
+++ b/fabric-biomes-v1/src/main/resources/fabric-biomes-v1.mixins.json
@@ -3,13 +3,17 @@
   "package": "net.fabricmc.fabric.mixin.biome",
   "compatibilityLevel": "JAVA_8",
   "mixins": [
+    "DimensionOptionsAccessor",
+    "DimensionTypeAccessor",
     "MixinAddEdgeBiomesLayer",
     "MixinAddHillsLayer",
     "MixinAddRiversLayer",
     "MixinBiomeSource",
     "MixinSetBaseBiomesLayer",
-    "MixinTheNetherDimension",
-    "MixinVanillaLayeredBiomeSource"
+    "MixinMinecraftDedicatedServer",
+    "MixinMultiNoiseBiomeSource",
+    "MixinVanillaLayeredBiomeSource",
+    "MultiNoiseBiomeSourceAccessor"
   ],
   "injectors": {
     "defaultRequire": 1
