--- a/fabric-renderer-registries-v1/build.gradle
+++ b/fabric-renderer-registries-v1/build.gradle
@@ -3,5 +3,5 @@ version = getSubprojectVersion(project, "2.0.1")
 
 dependencies {
 	compile project(path: ':fabric-api-base', configuration: 'dev')
-	testmodRuntimeOnly(project(path: ':fabric-resource-loader-v0', configuration: 'dev'))
+	testmodRuntimeOnly project(path: ':fabric-resource-loader-v0', configuration: 'dev')
 }
