--- a/build.gradle
+++ b/build.gradle
@@ -18,8 +18,8 @@ plugins {
 def ENV = System.getenv()
 
 class Globals {
-	static def baseVersion = "0.16.0"
-	static def mcVersion = "20w30a"
+	static def baseVersion = "0.16.1"
+	static def mcVersion = "1.16.2-pre1"
 	static def yarnVersion = "+build.1"
 }
 
