--- a/fabric-renderer-registries-v1/build.gradle
+++ b/fabric-renderer-registries-v1/build.gradle
@@ -3,4 +3,6 @@ version = getSubprojectVersion(project, "2.1.0")
 
 dependencies {
 	compile project(path: ':fabric-api-base', configuration: 'dev')
+
+	testmodCompile project(path: ':fabric-lifecycle-events-v1', configuration: 'dev')
 }
