--- a/fabric-biomes-v1/src/main/resources/fabric-biomes-v1.mixins.json
+++ b/fabric-biomes-v1/src/main/resources/fabric-biomes-v1.mixins.json
@@ -9,6 +9,7 @@
     "MixinAddHillsLayer",
     "MixinAddRiversLayer",
     "MixinBiomeSource",
+    "MixinGenerationSettings",
     "MixinSetBaseBiomesLayer",
     "MixinMinecraftDedicatedServer",
     "MixinMultiNoiseBiomeSource",
